# gedit

./: CONTRIBUTING.md  NEWS  README.md  gedit.doap  meson.build  meson_options.txt
build-aux/buildstream/: README.md  amtk.bst  gedit.bst  tepl.bst
build-aux/flatpak/: 0-readme.md  generate-json-manifest.sh  org.gnome.gedit.json  org.gnome.gedit.yml
build-aux/meson/: post_install.py
build-aux/snap/: snapcraft.yaml
data/: gedit.1  meson.build  org.gnome.gedit-ms-windows.gschema.override  org.gnome.gedit.desktop.in  org.gnome.gedit.gschema.xml.in  org.gnome.gedit.metainfo.xml.in  privacy-policy.md
data/icons/: meson.build
debian/: changelog  control  copyright  gedit-common.install  gedit-dev.install  gedit.install  gedit.lintian-overrides  gedit.postinst  gedit.prerm  rules
debian/patches/: 08_multiarch_fallback.patch  change-name-desktop.patch  series
debian/upstream/: metadata
docs/: build.md  common-bugs.md  gedit-development-getting-started.md  how-to-write-a-gedit-plugin.md  misc.md  roadmap.md
docs/reference/: api-breaks.xml  gedit-docs.xml  gedit-sections.txt  meson.build
gedit/: gedit-app-osx.h  gedit-app-osx.m  gedit-app-private.h  gedit-app-win32.c  gedit-app-win32.h  gedit-app.c  gedit-app.h  gedit-bottom-panel.c  gedit-bottom-panel.h  gedit-close-confirmation-dialog.c  gedit-commands-documents.c  gedit-commands-edit.c  gedit-commands-file-print.c  gedit-commands-file.c  gedit-commands-help.c  gedit-commands-private.h  gedit-commands-search.c  gedit-commands-view.c  gedit-debug.c  gedit-debug.h  gedit-dirs.c  gedit-dirs.h  gedit-document-private.h  gedit-document.c  gedit-document.h  gedit-documents-panel.c  gedit-encodings-combo-box.c  gedit-factory.c  gedit-factory.h  gedit-file-chooser-dialog-gtk.c  gedit-file-chooser-dialog-gtk.h  gedit-file-chooser-dialog.c  gedit-file-chooser-dialog.h  gedit-file-chooser-open-dialog.c  gedit-file-chooser-open-dialog.h  gedit-file-chooser-open-native.c  gedit-file-chooser-open-native.h  gedit-file-chooser-open.c  gedit-file-chooser-open.h  gedit-file-chooser.c  (+43 more)
gedit/resources/: gedit.gresource.xml.in  gedit.rc  meson.build
gedit/resources/css/: gedit-style.css
gedit/resources/gtk/: help-overlay.ui  menus-common.ui  menus-traditional.ui  menus.ui
gedit/resources/ui/: gedit-encodings-dialog.ui  gedit-preferences-dialog.ui  gedit-view-frame.ui  gedit-window.ui
help/: LINGUAS  meson.build
help/C/: gedit-brief-intro.page  gedit-change-color-scheme.page  gedit-close-file.page  gedit-create-new-file.page  gedit-edit-as-root.page  gedit-files-basic.page  gedit-full-screen.page  gedit-general-intro.page  gedit-open-file.page  gedit-open-files-from-sidepane.page  gedit-open-on-server.page  gedit-open-recent.page  gedit-open-several-files-at-once.page  gedit-plugin-guide.page  gedit-plugins-change-case.page  gedit-plugins-doc-stats.page  gedit-plugins-file-browser.page  gedit-plugins-insert-date-time.page  gedit-plugins-install.page  gedit-plugins-modelines.page  gedit-plugins-sort.page  gedit-plugins-text-size.page  gedit-printing.page  gedit-save-file.page  gedit-search-and-replace.page  gedit-search.page  gedit-spellcheck.page  gedit-syntax-highlighting.page  gedit-tab-groups.page  gedit-tabs.page  gedit-undo-redo.page  index.page
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/en_GB/: en_GB.po
help/es/: es.po
help/fr/: fr.po
help/hu/: hu.po
help/id/: id.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
plugins/: generate-list.sh  list-of-gedit-plugins.md  meson.build  third-party-plugins.md
plugins/docinfo/: docinfo.plugin.desktop.in  gedit-docinfo-plugin.c  meson.build
plugins/docinfo/resources/: meson.build
plugins/filebrowser/: filebrowser.plugin.desktop.in  gedit-file-bookmarks-store.c  gedit-file-browser-messages.c  gedit-file-browser-plugin.c  gedit-file-browser-store.c  gedit-file-browser-view.c  gedit-file-browser-widget.c  meson.build  org.gnome.gedit.plugins.filebrowser.gschema.xml
plugins/filebrowser/messages/: meson.build
plugins/filebrowser/resources/: meson.build
plugins/filebrowser/resources/ui/: gedit-file-browser-widget.ui
plugins/modelines/: meson.build  modeline-parser.c  modelines.plugin.desktop.in
plugins/quickhighlight/: gedit-quick-highlight-plugin.c  meson.build  quickhighlight.plugin.desktop.in
plugins/sort/: meson.build  sort.plugin.desktop.in
plugins/sort/resources/: meson.build
plugins/spell/: gedit-spell-plugin.c  meson.build  spell.plugin.desktop.in
plugins/spell/resources/: meson.build
plugins/textsize/: gedit-text-size-app-activatable.c  gedit-text-size-app-activatable.h  gedit-text-size-plugin.c  gedit-text-size-plugin.h  gedit-text-size-view-activatable.c  gedit-text-size-view-activatable.h  gedit-text-size-window-activatable.c  gedit-text-size-window-activatable.h  meson.build  textsize.plugin.desktop.in
plugins/time/: gedit-time-plugin.c  meson.build  time.plugin.desktop.in
plugins/time/resources/: meson.build
po/: LINGUAS  POTFILES.in  be.po  bn_IN.po  ca.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  ia.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  lt.po  lv.po  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  (+12 more)
