install_data(
  'org.gnome.gedit-16x16.png',
  rename: ['org.gnome.gedit.png'],
  install_dir: get_option('datadir') / 'icons/hicolor/16x16/apps'
)

install_data(
  'org.gnome.gedit-22x22.png',
  rename: ['org.gnome.gedit.png'],
  install_dir: get_option('datadir') / 'icons/hicolor/22x22/apps'
)

install_data(
  'org.gnome.gedit-24x24.png',
  rename: ['org.gnome.gedit.png'],
  install_dir: get_option('datadir') / 'icons/hicolor/24x24/apps'
)

install_data(
  'org.gnome.gedit-32x32.png',
  rename: ['org.gnome.gedit.png'],
  install_dir: get_option('datadir') / 'icons/hicolor/32x32/apps'
)

install_data(
  'org.gnome.gedit-48x48.png',
  rename: ['org.gnome.gedit.png'],
  install_dir: get_option('datadir') / 'icons/hicolor/48x48/apps'
)

install_data(
  'org.gnome.gedit-256x256.png',
  rename: ['org.gnome.gedit.png'],
  install_dir: get_option('datadir') / 'icons/hicolor/256x256/apps'
)

install_data(
  'org.gnome.gedit-symbolic.svg',
  install_dir: get_option('datadir') / 'icons/hicolor/symbolic/apps'
)
